--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.datasource.jdbc-interceptors=ConnectionState;SlowQueryReport(threshold=0)
 
 #JPA配置
 spring.jpa.show-sql=true
+
+#项目监听端口
+server.port=8005
