日志输出到文件

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,8 @@ server.port=8005
 
 #HTTP强制编码
 spring.http.encoding.force=true
+
+#日志
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=INFO
+logging.file=/home/yuanzhen/project/quiz201707/application.log
