使用JPA实现查询

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,7 @@ spring.datasource.jdbc-interceptors=ConnectionState;SlowQueryReport(threshold=0)
 
 #JPA配置
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 
 #项目监听端口
 server.port=8005
@@ -27,6 +28,7 @@ server.port=8005
 spring.http.encoding.force=true
 
 #日志
+#https://stackoverflow.com/questions/39158191/default-logging-file-for-spring-boot-application
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=INFO
 logging.file=/home/yuanzhen/project/quiz201707/application.log
