--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 #数据库链接
-spring.datasource.url=jdbc:postgresql://localhost:5432/test
+spring.datasource.url=jdbc:postgresql://172.17.0.2:5432/test
 #数据库用户
 spring.datasource.username=postgres
 #数据库用户对应的密码
 spring.datasource.password=123456
 #数据库驱动
 spring.datasource.driver-class-name=org.postgresql.Driver
-
 spring.datasource.max-idle=10
 spring.datasource.max-wait=10000
 spring.datasource.min-idle=5
@@ -16,19 +15,15 @@ spring.datasource.test-on-borrow=false
 spring.datasource.test-while-idle=true
 spring.datasource.time-between-eviction-runs-millis=18800
 spring.datasource.jdbc-interceptors=ConnectionState;SlowQueryReport(threshold=0)
-
 #JPA配置
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-
 #项目监听端口
 server.port=8005
-
 #HTTP强制编码
 spring.http.encoding.force=true
-
 #日志
 #https://stackoverflow.com/questions/39158191/default-logging-file-for-spring-boot-application
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=INFO
-logging.file=/home/yuanzhen/project/quiz201707/application.log
+logging.file=./application.log
